# learnopengl

./: .clang-format  .ignore  CMakeLists.txt  Makefile  compile_flags.txt
cmake/: LinkSDL2.cmake
libs/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: CMakeLists.txt  Main.cpp  Shader.cpp  Shader.h  shader.vert
